--- a/com/Makefile.inc
+++ b/com/Makefile.inc
@@ -1,17 +1,18 @@
 COM_OBJS +=\
-../com/ltype.o \
-../com/xmat.o \
-../com/comf.o \
-../com/strbuf.o \
-../com/smempool.o \
-../com/agraph.o \
-../com/sgraph.o \
-../com/rational.o \
-../com/birational.o \
-../com/bigint.o \
-../com/flty.o \
-../com/linsys.o \
-../com/diagnostic.o \
-../com/bs.o\
-../com/scc.o\
-../com/sbs.o
+$(SRC)/com/ltype.o \
+$(SRC)/com/xmat.o \
+$(SRC)/com/comf.o \
+$(SRC)/com/strbuf.o \
+$(SRC)/com/smempool.o \
+$(SRC)/com/agraph.o \
+$(SRC)/com/sgraph.o \
+$(SRC)/com/rational.o \
+$(SRC)/com/birational.o \
+$(SRC)/com/bigint.o \
+$(SRC)/com/flty.o \
+$(SRC)/com/linsys.o \
+$(SRC)/com/diagnostic.o \
+$(SRC)/com/bs.o\
+$(SRC)/com/scc.o\
+$(SRC)/com/sbs.o\
+$(SRC)/com/sort.o
