--- a/opt/Makefile.inc
+++ b/opt/Makefile.inc
@@ -1,62 +1,65 @@
 OPT_OBJS +=\
-../opt/cfs_opt.o\
-../opt/dbg.o\
-../opt/goto_opt.o\
-../opt/if_opt.o \
-../opt/du.o\
-../opt/ir.o\
-../opt/ir_bb.o\
-../opt/ir_builder.o\
-../opt/ir_du.o\
-../opt/ir_cfg.o\
-../opt/ir_simp.o\
-../opt/ir_gvn.o\
-../opt/ir_rce.o\
-../opt/ir_dce.o\
-../opt/ir_cp.o\
-../opt/ir_lcse.o\
-../opt/ir_gcse.o\
-../opt/ir_licm.o\
-../opt/ir_middle_opt.o\
-../opt/ir_high_opt.o\
-../opt/ir_expr_tab.o\
-../opt/cdg.o\
-../opt/ir_refine.o\
-../opt/ir_rp.o\
-../opt/ir_aa.o\
-../opt/ir_ssa.o\
-../opt/ir_mdssa.o\
-../opt/mdssainfo.o\
-../opt/label.o\
-../opt/data_type.o \
-../opt/option.o\
-../opt/region.o\
-../opt/region_mgr.o\
-../opt/util.o\
-../opt/var.o\
-../opt/md.o\
-../opt/loop.o\
-../opt/cfs_mgr.o\
-../opt/pass_mgr.o\
-../opt/inliner.o\
-../opt/ipa.o\
-../opt/callg.o\
-../opt/ir_loop_cvt.o\
-../opt/refine_duchain.o\
-../opt/prssainfo.o\
-../opt/scalar_opt.o\
-../opt/liveness_mgr.o\
-../opt/mdliveness_mgr.o\
-../opt/du_helper.o\
-../opt/symtab.o\
-../opt/logmgr.o\
-../opt/ai.o\
-../opt/gscc.o\
-../opt/lftr.o\
-../opt/ir_ivr.o\
-../opt/md_mgr.o\
-../opt/solve_set.o\
-../opt/infer_type.o\
-../opt/attachinfo_mgr.o\
-../opt/analysis_instr.o
+$(SRC)/opt/cfs_opt.o\
+$(SRC)/opt/dbg.o\
+$(SRC)/opt/goto_opt.o\
+$(SRC)/opt/if_opt.o \
+$(SRC)/opt/du.o\
+$(SRC)/opt/ir.o\
+$(SRC)/opt/ir_bb.o\
+$(SRC)/opt/ir_builder.o\
+$(SRC)/opt/ir_du.o\
+$(SRC)/opt/ir_cfg.o\
+$(SRC)/opt/ir_simp.o\
+$(SRC)/opt/ir_gvn.o\
+$(SRC)/opt/ir_rce.o\
+$(SRC)/opt/ir_dce.o\
+$(SRC)/opt/ir_cp.o\
+$(SRC)/opt/ir_lcse.o\
+$(SRC)/opt/ir_gcse.o\
+$(SRC)/opt/ir_licm.o\
+$(SRC)/opt/ir_middle_opt.o\
+$(SRC)/opt/ir_high_opt.o\
+$(SRC)/opt/ir_expr_tab.o\
+$(SRC)/opt/cdg.o\
+$(SRC)/opt/ir_refine.o\
+$(SRC)/opt/ir_rp.o\
+$(SRC)/opt/ir_aa.o\
+$(SRC)/opt/ir_ssa.o\
+$(SRC)/opt/ir_mdssa.o\
+$(SRC)/opt/mdssainfo.o\
+$(SRC)/opt/label.o\
+$(SRC)/opt/data_type.o \
+$(SRC)/opt/option.o\
+$(SRC)/opt/region.o\
+$(SRC)/opt/region_mgr.o\
+$(SRC)/opt/util.o\
+$(SRC)/opt/var.o\
+$(SRC)/opt/md.o\
+$(SRC)/opt/loop.o\
+$(SRC)/opt/cfs_mgr.o\
+$(SRC)/opt/pass_mgr.o\
+$(SRC)/opt/inliner.o\
+$(SRC)/opt/ipa.o\
+$(SRC)/opt/callg.o\
+$(SRC)/opt/ir_loop_cvt.o\
+$(SRC)/opt/refine_duchain.o\
+$(SRC)/opt/prssainfo.o\
+$(SRC)/opt/scalar_opt.o\
+$(SRC)/opt/liveness_mgr.o\
+$(SRC)/opt/mdliveness_mgr.o\
+$(SRC)/opt/du_helper.o\
+$(SRC)/opt/symtab.o\
+$(SRC)/opt/logmgr.o\
+$(SRC)/opt/ai.o\
+$(SRC)/opt/gscc.o\
+$(SRC)/opt/lftr.o\
+$(SRC)/opt/ir_ivr.o\
+$(SRC)/opt/md_mgr.o\
+$(SRC)/opt/solve_set.o\
+$(SRC)/opt/infer_type.o\
+$(SRC)/opt/attachinfo_mgr.o\
+$(SRC)/opt/analysis_instr.o\
+$(SRC)/opt/invert_brtgt.o\
+$(SRC)/opt/ir_helper.o\
+$(SRC)/opt/gr_helper.o
 
