--- a/reader/Makefile.inc
+++ b/reader/Makefile.inc
@@ -1,4 +1,4 @@
 READER_OBJS +=\
-../reader/ir_lex.o\
-../reader/ir_parser.o\
-../reader/grreader.o
+$(SRC)/reader/ir_lex.o\
+$(SRC)/reader/ir_parser.o\
+$(SRC)/reader/grreader.o
