--- a/opt/Makefile.inc
+++ b/opt/Makefile.inc
@@ -61,5 +61,6 @@ $(SRC)/opt/attachinfo_mgr.o\
 $(SRC)/opt/analysis_instr.o\
 $(SRC)/opt/invert_brtgt.o\
 $(SRC)/opt/ir_helper.o\
-$(SRC)/opt/gr_helper.o
-
+$(SRC)/opt/gr_helper.o\
+$(SRC)/opt/mdssalive_mgr.o\
+$(SRC)/opt/ir_vrp.o
