FEAT:fixup warning

--- a/opt/Makefile.inc
+++ b/opt/Makefile.inc
@@ -63,3 +63,5 @@ $(SRC)/opt/invert_brtgt.o\
 $(SRC)/opt/ir_helper.o\
 $(SRC)/opt/gr_helper.o\
 $(SRC)/opt/mdssalive_mgr.o
+
+CFLAGS += -Wno-unknown-pragmas
