--- a/com/Makefile
+++ b/com/Makefile
@@ -1,48 +1,28 @@
-include ./Makefile.inc
-
 ifeq ($(TARG),)
   TARG=NO_TARG
 endif
 
-ifeq ($(CC),)
-  CC:=$(shell which clang++ > /dev/null)
-  ifndef CC
-    CC=$(if $(shell which clang),clang,gcc)
-  endif
-endif
+include ./Makefile.inc
+include Makefile.option
 
-ifeq ($(CFLAGS),)
-  CFLAGS+=\
-    -D$(TARG) \
-    -D_SUPPORT_C11_ \
-    -O2 \
-    -g2 \
-    -Wall \
-    -Wno-unknown-pragmas \
-    -Wno-write-strings \
-    -Wsign-promo \
-    -Wparentheses \
-    -Wformat \
-    -Wsign-compare \
-    -Wpointer-arith \
-    -Wno-multichar \
-    -Winit-self \
-    -Wswitch
+#SET DEFAULT CFLAGS.
+CFLAGS+=\
+  -D$(TARG) \
+  -D_SUPPORT_C11_ \
+  -Wno-unknown-pragmas \
+  -Wno-write-strings \
+  -Wsign-promo \
+  -Wparentheses \
+  -Wformat \
+  -Wsign-compare \
+  -Wpointer-arith \
+  -Wno-multichar \
+  -Winit-self \
+  -Wswitch
 
-  #Disable -Wconversion to avoid too much complaints.
-
-  ifneq (,$(filter $(CC),g++ gcc))
-    CFLAGS+=-Wno-strict-aliasing -finline-limit=10000000
-  endif
-endif
-
-ifdef WIN
-  #Add predefined macro if build host is Windows.
-  CFLAGS+=-D_ON_WINDOWS_
-endif
-
-ifeq ($(DEBUG), true)
-  CFLAGS+=-D_DEBUG_
+#Disable -Wconversion to avoid too much complaints.
+ifneq (,$(filter $(CC),g++ gcc))
+  CFLAGS+=-Wno-strict-aliasing -finline-limit=10000000
 endif
 
 $(COM_OUTPUT): com_objs 
