--- a/.github/workflows/linux_make.yml
+++ b/.github/workflows/linux_make.yml
@@ -12,4 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make -f Makefile.xoc
+      run: 
+        export TARG=FOR_x64
+        export TARG_DIR=x64
+        make -f Makefile.xoc
