--- a/.github/workflows/linux_make.yml
+++ b/.github/workflows/linux_make.yml
@@ -13,6 +13,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: 
-        export TARG=FOR_x64
-        export TARG_DIR=x64
-        make -f Makefile.xoc
+        export TARG=FOR_x64; export TARG_DIR=x64; make -f Makefile.xoc
