FEAT:Add interface of TargInfo

--- a/Makefile.option
+++ b/Makefile.option
@@ -33,19 +33,45 @@ else
   $(info "NOTE:$(CC) DOES NOT SUPPORT C++11")
 endif
 
+#Try to disable the warning.
+WARN=class-memaccess
+CC_SUPPORTS_WNO-$(WARN) := $(shell echo "" | \
+  $(CC) -Wno-$(WARN) -c -x c++ \
+  - > /dev/null 2>&1 && echo YES || echo NO)
+ifeq ($(CC_SUPPORTS_WNO-$(WARN)),YES)
+  $(info "NOTE:$(CC) SUPPORT -Wno-$(WARN)")
+  CFLAGS+=-Wno-$(WARN)
+else
+  $(info "NOTE:$(CC) DOES NOT SUPPORT -Wno-$(WARN)")
+endif
+
+#Try to disable the warning.
+WARN=delete-incomplete
+CC_SUPPORTS_WNO-$(WARN) := $(shell echo "" | \
+  $(CC) -Wno-$(WARN) -c -x c++ \
+  - > /dev/null 2>&1 && echo YES || echo NO)
+ifeq ($(CC_SUPPORTS_WNO-$(WARN)),YES)
+  $(info "NOTE:$(CC) SUPPORT -Wno-$(WARN)")
+  CFLAGS+=-Wno-$(WARN)
+else
+  $(info "NOTE:$(CC) DOES NOT SUPPORT -Wno-$(WARN)")
+endif
+
+#Try to disable the warning.
 #The code attemps to compile an empty C++ file with the warning option, and
 #return YES if compilation is successful, otherwise return NO. The return info
 #is record in a makefile variable.
-CC_SUPPORTS_WNO_MISMATCHED_NEW_DELETE := $(shell echo "" | \
-  $(CC) -Wno-mismatched-new-delete -c -x c++ \
+#The warning is NOT effect without optimization, thus code must be
+#compiled with the -O2 option in order for GCC to find the bug.
+WARN=mismatched-new-delete
+CC_SUPPORTS_WNO-$(WARN) := $(shell echo "" | \
+  $(CC) -Wno-$(WARN) -c -x c++ \
   - > /dev/null 2>&1 && echo YES || echo NO)
-ifeq ($(CC_SUPPORTS_WNO_MISMATCHED_NEW_DELETE),YES)
-  $(info "NOTE:$(CC) SUPPORT -Wno-mismatched-new-delete")
-  #The warning is NOT effect without optimization, thus code must be
-  #compiled with the -O2 option in order for GCC to find the bug.
-  CFLAGS+=-Wno-mismatched-new-delete
+ifeq ($(CC_SUPPORTS_WNO-$(WARN)),YES)
+  $(info "NOTE:$(CC) SUPPORT -Wno-$(WARN)")
+  CFLAGS+=-Wno-$(WARN)
 else
-  $(info "NOTE:$(CC) DOES NOT SUPPORT -Wno-mismatched-new-delete")
+  $(info "NOTE:$(CC) DOES NOT SUPPORT -Wno-$(WARN)")
 endif
 
 #To conveninently use DUMMYUSE, some compiler will complain for comma
