--- a/Makefile.xoc
+++ b/Makefile.xoc
@@ -8,16 +8,20 @@ ifeq ($(TARG_DIR),)
   $(error "NEED TARG_DIR INFO:e.g:make TARG=FOR_ARM TARG_DIR=arm")
 endif
 
+ifeq ($(ROOT_DIR),)
+  $(error "NEED ROOT_DIR:e.g:make ROOT_DIR=~/xoc")
+endif
+
 ifeq ($(THREAD_NUM),)
   THREAD_NUM=1
 endif
 
 CFLAGS+=-Wall
-OPT_DIR=opt
-COM_DIR=com
-READER_DIR=reader
-MACH_DIR=mach
-CURFILE=$(CURDIR)/Makefile.xoc
+OPT_DIR=$(ROOT_DIR)/opt
+COM_DIR=$(ROOT_DIR)/com
+READER_DIR=$(ROOT_DIR)/reader
+MACH_DIR=$(ROOT_DIR)/mach
+CURFILE=$(ROOT_DIR)/Makefile.xoc
 
 $(info "INCLUDE: IN $(CURFILE), INCLUDE $(READER_DIR)/Makefile.inc")
 include $(READER_DIR)/Makefile.inc
@@ -31,11 +35,11 @@ include $(OPT_DIR)/Makefile.inc
 $(info "INCLUDE: IN $(CURFILE), INCLUDE $(MACH_DIR)/Makefile.inc")
 include $(MACH_DIR)/Makefile.inc
 
-$(info "INCLUDE: IN $(CURFILE), INCLUDE Makefile.xoc.inc")
-include Makefile.xoc.inc
+$(info "INCLUDE: IN $(CURFILE), INCLUDE $(ROOT_DIR)/Makefile.xoc.inc")
+include $(ROOT_DIR)/Makefile.xoc.inc
 
-$(info "INCLUDE: IN $(CURFILE), INCLUDE Makefile.option")
-include Makefile.option
+$(info "INCLUDE: IN $(CURFILE), INCLUDE $(ROOT_DIR)/Makefile.option")
+include $(ROOT_DIR)/Makefile.option
 
 #SET DEFAULT CFLAGS.
 CFLAGS+=\
@@ -83,6 +87,8 @@ $(info "CFLAGS:$(CFLAGS)")
 $(info "DEBUG:$(DEBUG)")
 $(info "THREAD_NUM:$(THREAD_NUM)")
 
+.PHONY: $(XOC_OUTPUT) $(COM_OUTPUT)
+
 #Define rules.
 $(XOC_OUTPUT): $(COM_OUTPUT) tmp_opt_objs tmp_reader_objs tmp_mach_objs
 	@echo "START BUILD $(XOC_OUTPUT)"
@@ -97,10 +103,15 @@ $(XOC_OUTPUT): $(COM_OUTPUT) tmp_opt_objs tmp_reader_objs tmp_mach_objs
 	$(CC) $(CFLAGS) $(INC) -c $< -o $@
 
 $(COM_OUTPUT):
-	@echo "BUILD $(COM_OUTPUT)"
+	@echo "CURDIR:$(CURDIR), BUILD $(COM_OUTPUT)"
 	@echo "EXEC:"
-	cd $(COM_DIR) && make -j$(THREAD_NUM) -f Makefile TARG=$(TARG) \
-	  DEBUG=$(DEBUG) CFLAGS="$(CFLAGS)" THREAD_NUM=$(THREAD_NUM)
+	make -C $(COM_DIR) -j$(THREAD_NUM) -f Makefile \
+      TARG=$(TARG) \
+      TARG_DIR=$(TARG_DIR) \
+	  DEBUG=$(DEBUG) \
+	  ROOT_DIR=$(ROOT_DIR) \
+      CFLAGS="$(CFLAGS)" \
+      THREAD_NUM=$(THREAD_NUM)
 
 tmp_opt_objs: $(TMP_OPT_OBJS)
 	@echo "EXEC:tmp_opt_objs:$(TMP_OPT_OBJS)"
